--- a/css.css
+++ b/css.css
@@ -5,8 +5,13 @@ body {
 
 #title {
   background-color: #00FFFF;
+  font-size: 4%;
   padding: 8%;
   text-align: center;
+}
+
+#title span {
+  font-size: 2%;
 }
 
 #bar {
